# twenty-questions

./: .gitignore  Makefile  main.py  pyproject.toml  requirements.txt  things.yaml  vercel.json
webapp/: package.json
webapp/public/: index.html
webapp/src/: App.css  App.tsx
