[tool.poetry]
name = "20-questions"
version = "0.1.0"
description = ""
authors = ["Sina Siadat <siadat@gmail.com>"]
readme = "README.md"
packages = [{include = "20_questions"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
openai = "^0.27.4"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
